fixed jumping passman-control on mobileview

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -56,18 +56,16 @@
 
 #app-content #app-content-wrapper #passman-controls {
   border-bottom: 1px solid #c9c9c9;
-  margin-top: 5px;
 }
 
 #passman-controls {
   box-sizing: border-box;
   position: fixed;
-  top: 45px;
+  margin: -45px 0 0;
   right: 0;
   left: 0;
   border-bottom: 1px solid #c9c9c9;
   padding: 0 !important;
-  margin: 0;
   background-color: rgba(255, 255, 255, .95);
   z-index: 50;
   -webkit-user-select: none;
